# cstag

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  lengthen.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  deploy_ghpages.yml  deploy_pypi.yml  doctest.yml  pytest.yml  test.yml
cstag/: __init__.py  call.html  cons.html  consensus.html  convert.html  cstag.html  hello.html  index.html  length.html  lengthen.html  mask.html  revcomp.html  shorten.html  split.html  test.html  to_html.html  to_pdf.html  to_sequence.html  to_vcf.html
cstag/utils/: index.html  validator.html
joss/: paper.md
paper/: paper.bib  paper.md
src/: cstag.html  cstag.py  index.html  test.html
src/cstag/: __init__.py  call.py  cons.py  consensus.py  convert.py  cstag.py  hello.py  length.py  lengthen.py  mask.py  revcomp.py  shorten.py  split.py  test.py  to_html.py  to_pdf.py  to_sequence.py  to_vcf.py
src/cstag/utils/: validator.py
tests/: README.md  test_call.py  test_consensus.py  test_lengthen.py  test_mask.py  test_revcomp.py  test_shorten.py  test_split.py  test_to_html.py  test_to_sequence.py  test_to_vcf.py  test_validator.py
tests/data/: random_100bp.fa  random_100bp_plus10bp.fa  random_1500bp.fa
tests/data/associate/: generate_sam.sh  query.fq  query.sam  reference.mfa
tests/data/consensus/: generate.sh  subindel_cs.sam  subindel_cs_plus10bp.sam  subindel_cslong.sam  subindel_cslong_plus10bp.sam
tests/data/deletion/: del.fq  del.sam  del_cs.paf  del_cs.sam  del_cslong.paf  del_cslong.sam  generate_del.sh
tests/data/insertion/: generate_ins.sh  ins.fq  ins_cs.sam  ins_cslong.sam
tests/data/match/: generate_match.sh  match.fq  match_cs.sam  match_cslong.sam
tests/data/real/: barcode32.fq  generate.sh  tyr.fa  tyr_cs.sam  tyr_cslong.sam
tests/data/softclip/: generate.sh  softclip.fq  softclip_cs.sam  softclip_cslong.sam  softclip_no_cs.sam
tests/data/splicing/: generate.sh  splicing.fq  splicing_cs.sam  splicing_cslong.sam
tests/data/subindel/: generate_subindel.sh  subindel.fq  subindel.sam  subindel_cs.paf  subindel_cs.sam  subindel_cslong.paf  subindel_cslong.sam
tests/data/substitution/: generate_sub.sh  sub.fq  sub.sam  sub_cs.paf  sub_cs.sam  sub_cslong.paf  sub_cslong.sam
tests/data/to_html/: report.html  report_substitution.html  report_substitution_end.html  report_substitution_start.html
