[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cstag"
version = "0.5.1"
description = "Python module to manipulate the minimap2's CS tag"
authors = [{ name = "Akihiro Kuno", email = "akuno@md.tsukuba.ac.jp" }]
requires-python = ">=3.7"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/akikuno/cstag"
repository = "https://github.com/akikuno/cstag"
documentation = "https://akikuno.github.io/cstag/cstag"


[tool.setuptools]
packages.find = { where = ["src"] }
