[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cstag"
version = "1.0.2"
description = "Python module to manipulate the minimap2's CS tag"
authors = ["Akihiro Kuno <akuno@md.tsukuba.ac.jp>"]
homepage = "https://github.com/akikuno/cstag"
repository = "https://github.com/akikuno/cstag"
documentation = "https://akikuno.github.io/cstag/cstag"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.7"
weasyprint = ">=52.5"
