[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cstag"
version = "1.1.0"
description = "Python library tailored for for manipulating and visualizing minimap2's cs tags"
authors = ["Akihiro Kuno <akuno@md.tsukuba.ac.jp>"]
homepage = "https://github.com/akikuno/cstag"
repository = "https://github.com/akikuno/cstag"
documentation = "https://akikuno.github.io/cstag/cstag"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--ignore=examples",
    "--verbose",
    "-ra",
    "--color=yes",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
pythonpath = "src"
testpaths = ["tests"]
